@@ -1,4 +1,4 @@
-GNU C Library NEWS -- history of user-visible changes.  2012-1-10
+GNU C Library NEWS -- history of user-visible changes.  2012-1-26
 Copyright (C) 1992-2009, 2010, 2011, 2012 Free Software Foundation, Inc.
 See the end for copying conditions.
 
@@ -10,7 +10,7 @@ Version 2.16
 * The following bugs are resolved with this release:
 
   13525, 13526, 13527, 13528, 13529, 13531, 13532, 13533, 13547, 13530,
-  13551, 13552, 13553, 13555, 13559
+  13551, 13552, 13553, 13555, 13559, 13583
 
 * ISO C11 support:
 
